kubernetes/apps/production/arr/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: arr
  labels:
    app: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
        - name: sabnzbd
          image: ghcr.io/linuxserver/sabnzbd@sha256:7afe3af1cff19c2a7a5d4bacb2202fcb21a0ee15b7e23e4114ab3f7070213662
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "1024Mi"
              cpu: "500m"
            limits:
              memory: "4Gi"
              cpu: "2000m"
          volumeMounts:
            - mountPath: /config
              name: sabnzbd-config
            - mountPath: /data
              name: nas
            - mountPath: /incomplete
              name: sabnzbd-incomplete
      volumes:
        - name: nas
          nfs:
            path: /mnt/thePool/thePoolShare
            server: 10.0.0.10
        - name: sabnzbd-config
          persistentVolumeClaim:
            claimName: sabnzbd-config
        - name: sabnzbd-incomplete
          emptyDir:
            sizeLimit: 100Gi
      nodeSelector:
        kubernetes.io/hostname: master3
