kubernetes/apps/production/arr/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless-sabnzbd
  namespace: arr
spec:
  selector:
    app: sabnzbd
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
