kubernetes/apps/production/arr/sabnzbd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: arr
spec:
  ingressClassName: nginx
  rules:
    - host: "sab.local.mafyuh.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headless-sabnzbd
                port:
                  number: 8080
  tls:
    - hosts:
        - "sab.local.mafyuh.com"
      secretName: local-mafyuh-com-production-tls
